<resources>
    <string name="app_name">Recolle</string>
    <string name="content_desc_task_fab">Add a new task</string>
    <string name="priority">Priority</string>
    <string name="task_priority_high">High</string>
    <string name="task_priority_medium">Medium</string>
    <string name="task_priority_low">Low</string>
    <string name="task_save_button">Save</string>
    <string name="task_name">Task Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="content_desc_task_edit">Edit task</string>
    <string name="content_desc_task_delete">Delete task</string>
    <string name="task_delete_confirmation_message">Delete this task?</string>
    <string name="cancel">Cancel</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="remind_date">Remind Date</string>
    <string name="remind_time">Remind Time</string>
    <string name="reminder_delete_confirmation_message">Delete this reminder?</string>
    <string name="remind_notification_channel_title">Reminder Notifications</string>
    <string name="remind_notification_channel_description">Handles notifications for reminders.</string>
    <string name="checked_description">Reminder will be cleared two hours after the event time.</string>
    <string name="notification_remind_event_today">Event occurring right now.</string>
    <string name="notification_remind_event_this_month">Event occurring at %1$s</string>
    <string name="notification_remind_event_this_year">Event occurring on %1$s at %2$s</string>
    <string name="notification_remind_event_other_years">Event occurring on %1$s at %2$s</string>
    <string name="home_tab_tasks">Tasks</string>
    <string name="home_tab_reminders">Reminders</string>
    <string name="dialog_invalid_reminder_title">Invalid Reminder</string>
    <string name="dialog_invalid_reminder_OK">OK</string>
    <string name="subtasks">Subtasks</string>
    <string name="checkbox_contains_subtasks">Contains subtasks</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="add_subtask">Add Subtask</string>
    <string name="subtask_name">Subtask Name</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>