<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contextClickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_margin="@dimen/margin">

    <!-- Requests focus when fragment is entered. Main purpose is to remove focus highlights that
         show under certain conditions.
         If MinApi >= 26, we could use View's android:defaultFocusHighlightEnabled or
         android:focusedByDefault. -->
    <requestFocus />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/layout_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/task_name"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group_task_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_task_name">

        <RadioButton
            android:id="@+id/radio_priority_high"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/task_priority_high"
            app:buttonTint="@color/priorityHigh" />

        <RadioButton
            android:id="@+id/radio_priority_medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/task_priority_medium"
            app:buttonTint="@color/priorityMedium" />

        <RadioButton
            android:id="@+id/radio_priority_low"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/task_priority_low"
            app:buttonTint="@color/priorityLow" />
    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_save_button"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_task_priority"
        />
</androidx.constraintlayout.widget.ConstraintLayout>